<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="appName">Anywhere2 Consumer</string>
<string name="logo">Anywhere2</string>
<string name="blurb">Welcome to Anywhere2. Use the button below to connect to the Anywhere2 service: once GPS has found your current location, you will receive information about the nearest piece of content.</string>
<string name="hide">Run Anywhere2 in the background</string>
<string name="cancel">Cancel</string>
<string name="confirm">Confirm</string>
<string name="filter">Specify a collection</string>
<string name="filterBlurb">Type a username into the box below to receive only content created by that user.</string>
<string name="serviceOn">Connect to Anywhere2 service</string>
<string name="serviceOff">Disconnect from Anywhere2 service</string>
<string name="serviceOnStatus">Connected to Anywhere2 service</string>
<string name="serviceOffStatus">Not connected to Anywhere2 service</string>
<string name="locationServiceName">com.jcolley.anywere2.android.consumer.LocationService</string>
<string name="gpsOffBlurb">GPS turned off: you must enable it in your Settings before you can connect to Anywhere2</string>
<string name="gpsStoppedBlurb">GPS not currently active</string>
<string name="gpsStartedNoFixBlurb">GPS hasn\'t found your location but can see</string>
<string name="gpsStartedFixBlurb">GPS is active and is pinpointing your location</string>
<string name="gpsStartedLocBlurb">GPS has pinpointed your location</string>
<string name="notSearchingForContentBlurb">Unable to search for content</string>
<string name="nearContentBlurb">Distance from nearest content is </string>
<string name="sameContentBlurb">You\'ve already received content from this area</string>
<string name="downloadingContentBlurb">Downloading content</string>
<string name="noPluginBlurb">Content here requires a plugin that you need to install</string>
<string name="back">Return to Anywhere2</string>
<string name="restartServiceReminder">Remember to reconnect to the Anywhere2 service when you\'ve closed this web-page</string>
<string name="backButtonTip">Press your phone\'s Back button once you\'ve finished with a piece of media</string>
</resources>
