<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/blurb"
    />
<Button android:text="@string/serviceOn" android:id="@+id/serviceButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
<TextView  
	android:id="@+id/locationStatus"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/serviceOffStatus"
    />
<TextView  
	android:id="@+id/gpsStatus"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/gpsStoppedBlurb"
    />
<TextView  
	android:id="@+id/contentStatus"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/notSearchingForContentBlurb"
    />
<Button android:text="@string/hide" android:id="@+id/hideButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
